AB-25: fix crud
